support all possible game types choose random